--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-table": "^6.8.0",
     "redux": "^3.7.2",
     "redux-persist": "^5.9.0"
   },
