--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "immutability-helper": "^2.6.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-modal-dialog-react16": "^1.0.9",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
