--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "dateformat": "^3.0.3",
     "immutability-helper": "^2.6.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
