--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "crypto-js": "^3.1.9-1",
     "dateformat": "^3.0.3",
     "immutability-helper": "^2.6.5",
     "react": "^16.2.0",
