--- a/package.json
+++ b/package.json
@@ -6,17 +6,13 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "crypto-js": "^3.1.9-1",
-    "dateformat": "^3.0.3",
     "immutability-helper": "^2.6.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal-dialog-react16": "^1.0.9",
-    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-table": "^6.8.0",
-    "redux": "^3.7.2",
-    "redux-persist": "^5.9.0"
+    "react-table": "^6.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
